--- a/docker/kratos/kratos.yml
+++ b/docker/kratos/kratos.yml
@@ -1,4 +1,4 @@
-version: v1.1.0
+version: v1.2.0
 
 oauth2_provider:
     url: "http://hydra:4445"
@@ -46,6 +46,9 @@ selfservice:
                 oidc:
                     hooks:
                     - hook: session
+                webauthn:
+                    hooks:
+                    - hook: session
     methods:
         totp:
          enabled: true
@@ -57,6 +60,17 @@ selfservice:
                 haveibeenpwned_enabled: false
         code:
             enabled: True
+        webauthn:
+            enabled: True
+            config:
+                passwordless: True
+                rp:
+                    # Set 'id' to the top-level domain.
+                    id: localhost
+                    # Set 'origin' to the exact URL of the page that prompts the user to use WebAuthn. You must include the scheme, host, and port.
+                    origins:
+                        - http://localhost:4455/ui/
+                    display_name: Canonical
         oidc:
             enabled: True
             config:
