chore: update compose config

--- a/docker/hydra/hydra.yml
+++ b/docker/hydra/hydra.yml
@@ -30,7 +30,7 @@ strategies:
 
 urls:
   self:
-    issuer: http://hydra:4444
+    issuer: http://localhost:4444
     public: http://localhost:4444
   consent: http://localhost:4455/ui/consent
   login: http://localhost:4455/ui/login
