--- a/ui/package.json
+++ b/ui/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "14.2.1",
+    "@playwright/test": "1.46.0",
     "@testing-library/jest-dom": "6.6.2",
     "@testing-library/react": "15.0.2",
     "@testing-library/user-event": "14.5.2",
