chore(tests) add e2e test suite as part of ci
Signed-off-by: David Edler <david.edler@canonical.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,8 @@ on:
 jobs:
   unit-test:
     uses: ./.github/workflows/unittest.yaml
+  e2e-test:
+    uses: ./.github/workflows/e2etest.yaml
   build:
     uses: ./.github/workflows/build.yaml
   publish:
